[package]
name = "axon"
version = "0.1.0"
authors = ["jason ridgway-taylor <jason@glottologist.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2"
log = "0.4"
env_logger = "0.6"
rand = "0.6"
clap = "3.0.0-beta.2"
