[package]
name = "axon-rs"
version = "0.1.0"
authors = ["jason ridgway-taylor <jason@glottologist.co.uk>"]
edition = "2018"
license-file = "LICENSE"
description = "A port of Neuron command line zettelkasten app to Rust from Haskell with additional features"
homepage = "https://github.com/glottologist/axon"
documentation = "https://docs.rs/axon-rs"
repository = "https://github.com/glottologist/axon/"
readme = "README.md"


[dependencies]
structopt = "0.2"
log = "0.4"
env_logger = "0.6"
rand = "0.6"
clap = "3.0.0-beta.2"
